update index and output

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@ html * {
 /* Set the column floats and widths */
 
 .wide-column{
-  float: right;
-  width: 65%;
+  float: left;
+  width: 70%;
 }
 
 .side-column{
   float: left;
-  width: 35%;
+  width: 30%;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1400px) {
   .wide-column, .side-column{
     width: 80%; /* The width is 100%, when the viewport is 800px or smaller */
   }
@@ -111,7 +111,7 @@ body {
 <div class="menubar" id="my_menubar">
 <ul>
 <li><a href="index.html">Home</a></li>
-<!-- <li><a href="teaching.html">Teaching</a></li> -->
+<li><a href="output.html">Output</a></li> 
 </ul>
 </div>
 </div>
@@ -168,7 +168,7 @@ Amherst, MA 01003<br>
 
 <br>
 
-<p> My research is broadly concerned with issues of productivity, variation and gradience. Some of my current/recent projects include affix order variation in Turkish, direct causatives of unergatives in Hindi-Urdu, Turkish and Sason Arabic and variable agreement with conjoined subjects in German. I also have an interest in diachronic perspectives, and I dabble in computational modelling and distributional semantics.</p> 
+<p> My research is broadly concerned with issues of variation, gradience and productivity. Some of my current/recent projects include affix order variation in Turkish, direct causatives of unergatives in Hindi-Urdu, Turkish and Sason Arabic, and variable agreement with conjoined subjects in German. I dabble in computational modelling and distributional semantics, and I have an interest in language contact and diachrony.</p> 
 
 <br>
 
@@ -178,7 +178,7 @@ Amherst, MA 01003<br>
 
 <p>This is a low-carbon website. It is also under construction, possibly for a while.</p>
 
-<span style="display:inline-block; width: 15px;"></span>
+<span style="display:inline-block; height: 65px;"></span>
 
 </div>
 </div> 
