--- a/output.html
+++ b/output.html
@@ -134,7 +134,7 @@ body {
 
 <br>
 
-<p>2023. Causatives of unergatives in Hindi-Urdu. <i>Coyote Papers 25: Proceedings of ALC 16</i>: 71&#x2013;78. <a href="Neu_2023_ALC.pdf">[pdf]</a></p>
+<p>2023. Causatives of unergatives in Hindi-Urdu. <i>Coyote Papers 25: Proceedings of ALC 16</i>. 71&#x2013;78. <a href="Neu_2023_ALC.pdf">[pdf]</a></p>
 
 <br>
 
@@ -142,7 +142,7 @@ body {
 
 <br> 
 
-<span style="display:inline-block; width: 35px;"></span>
+<span style="display:inline-block; height: 65px;"></span>
 
         
 </body>
