--- a/output.html
+++ b/output.html
@@ -37,23 +37,17 @@ html * {
   font-family: Times New Roman;
 }
 
-/* Set the column floats and widths */
-
-.wide-column{
-  float: right;
-  width: 65%;
-}
-
-.side-column{
-  float: left;
-  width: 35%;
-}
-
-@media screen and (max-width: 1200px) {
-  .wide-column, .side-column{
-    width: 80%; /* The width is 100%, when the viewport is 800px or smaller */
+@media screen and (max-width: 1100px) {
+.main, .menubar{
+    width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+    font-size: 15px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
   }
-}
+ }
+
 
 /* Reset styles to ensure consistent styling across browsers */
 
@@ -65,9 +59,10 @@ html * {
 
 /* Body styles */
 
-body {
+.body {
   background-color: White;
   font-size: 22px;
+  float: left;
 }
 
 /* Menubar styles */
@@ -79,6 +74,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+      font-size: 22px;
 }
 
 .menubar ul {
@@ -123,20 +119,24 @@ body {
 
 <!-- Page Content -->
 
-<div style="margin-top:2%; text-align:justify;">  
+<div class="main" style="margin-top:2%; float:left; font-size: 22px;">  
 
 
 <p>Under review. Causatives of unergatives: A view from variable unaccusativity. <a href="Neu_2023_UnderReview.pdf">[pdf]</a></p>
 
-<br>
+<span style="display:inline-block; height: 20px;"></span>
+
 
 <p>2023. Variable agreement with conjoined subjects in German: Testing the grammatical lacuna hypothesis. Unpublished Ms., UMass Amherst. <a href="Neu_2023_Ms.pdf">[pdf]</a></p>
 
-<br>
+<span style="display:inline-block; height: 20px;"></span>
+
 
 <p>2023. Causatives of unergatives in Hindi-Urdu. <i>Coyote Papers 25: Proceedings of ALC 16</i>. 71&#x2013;78. <a href="Neu_2023_ALC.pdf">[pdf]</a></p>
 
-<br>
+
+
+<span style="display:inline-block; height: 20px;"></span>
 
 <p>2023. Against a low subject analysis of causatives of unergatives. <i>Proceedings of the Linguistic Society of America (PLSA) 8(1)</i>. 5527. <a href="Neu_2023_LSA.pdf">[pdf]</a></p>
 
