--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@ body {
 <!-- Contact Info on the Sidebar -->
 
 <div class="side-column" >
-<div style="margin-top:7%"> 
-<div style="font-size: 34px;">
+<div style="margin-top:7%; font-size: 34px;"> 
 
 <span style="display:inline-block; width: 50px;"></span>
 
@@ -147,7 +146,6 @@ body {
 <p>eneu at umass dot edu<br>
 
 <span style="display:block; height: 10px;"></span>
-<div style="font-size: 17px;">
 
 <p>Department of Linguistics<br>
 N408 Integrative Learning Center<br>
@@ -155,19 +153,13 @@ University of Mass. Amherst<br>
 650 North Pleasant Street<br>
 Amherst, MA 01003<br>
 </p>
-</div>
             
 <!-- Links on the Sidebar -->
 
-<span style="display:inline-block; height: 10px;"></span>
-
-<div style="font-size: 17px;">
+<span style="display:inline-block; height: 10px; width: 15px;"></span>
 
 <p><a href="https://github.com/Eva-Neu">GitHub</a><br>
 
-<span style="display:inline-block; width: 15px;"></span>
-
-</div>
 </div>
 </div>
 </div>
