thou art more lovely and more temperate

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <style>
 
 a {
-  color: black;
+  color: grey;
 }
 p {
   margin-top: 0px;
@@ -141,7 +141,7 @@ body {
 
 <b>Eva Neu</b></div><br>
 
-<div style="font-size: 17px;">
+<div style="font-size: 17px; color: grey">
                 
 <p>eneu at umass dot edu<br>
 
@@ -156,9 +156,11 @@ Amherst, MA 01003<br>
             
 <!-- Links on the Sidebar -->
 
-<span style="display:inline-block; height: 10px; width: 15px;"></span>
+<span style="display:inline-block; height: 10px; "></span>
 
 <p><a href="https://github.com/Eva-Neu">GitHub</a><br>
+
+<span style="display:inline-block; height: 30px; "></span>
 
 </div>
 </div>
