--- a/output.html
+++ b/output.html
@@ -72,7 +72,7 @@ html * {
 }
 
 .menubar li {
-  margin-right: 22px;
+  margin-left: 24px;
 }
 
 .menubar a {
@@ -121,7 +121,7 @@ html * {
 
 <div class="main" style="margin-top:4%; float:left ">  
 
-<p>Under review. Causatives of unergatives: A view from variable unaccusativity. <a href="Neu_2023_UnderReview.pdf">[pdf]</a></p>
+<p>Under review. Causatives of unergatives: A view from variable unaccusativity. <a href="Neu_2023_Resubmitted.pdf">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
