--- a/output.html
+++ b/output.html
@@ -121,7 +121,7 @@ html * {
 
 <div class="main" style="margin-top:4%; float:left ">  
 
-<p>Under review. Direct causatives of unergatives: A view from variable unaccusativity. <a href="Neu_2023_Resubmitted.pdf">[pdf]</a></p>
+<p>Resubmitted. Direct causatives of unergatives: A view from variable unaccusativity. <a href="Neu_2024_Resubmitted.pdf">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
