--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ Amherst, MA 01003<br>
 
 <span style="display:block; height: 10px;"></span>
 
-<p>I am a third year PhD candidate at the Linguistics Department of the University of Massachusetts Amherst, working on syntax, morphology and the lexicon-syntax interface. I hold a BA in Comparative Literature from Free University of Berlin and an MA in Linguistics from University College London.</p>
+<p>I am a third year PhD student at the Linguistics Department of the University of Massachusetts Amherst, working on syntax, morphology and the lexicon-syntax interface. I hold a BA in Comparative Literature from Free University of Berlin and an MA in Linguistics from University College London.</p>
 
 <br>
 
