--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ Amherst, MA 01003<br>
 
 <br>
 
-<p> My research is broadly concerned with issues of variation, gradience and productivity. Some of my current/recent projects include affix order variation in Turkish, direct causatives of unergatives in Hindi-Urdu, Turkish and Sason Arabic, and variable agreement with conjoined subjects in German. I dabble in computational modelling and distributional semantics, and I have an interest in language contact and diachrony.</p> 
+<p> My research is broadly concerned with issues of variation, gradience and productivity. Some of my current/recent projects include tense and agreement morphology in Turkish, direct causatives of unergatives in Hindi-Urdu, Turkish and Sason Arabic, and variable agreement with conjoined subjects in German. I dabble in computational modelling and distributional semantics, and I have an interest in language contact and diachrony.</p> 
 
 <br>
 
