--- a/output.html
+++ b/output.html
@@ -34,7 +34,7 @@ a {
 }
 
 html * {
-  font-family: Times New Roman;
+  font-family: Helvetica, sans-serif;
 }
 
 /* Reset styles to ensure consistent styling across browsers */
@@ -48,8 +48,10 @@ html * {
 /* Body styles */
 
 .main {
-  background-color: White;
-  font-size: 22px;
+  position: absolute;
+  background-color: Black;
+  color: White;
+  font-size: 18px;
   float: left;
 }
 
@@ -62,7 +64,7 @@ html * {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  font-size: 22px;
+  font-size: 18px;
 }
 
 .menubar ul {
@@ -104,7 +106,7 @@ html * {
 
 <!-- Body here  -->
 
-<body>
+<body style="background-color:Black">
 
 <!-- Navigation bar  -->
 
@@ -121,23 +123,27 @@ html * {
 
 <div class="main" style="margin-top:4%; float:left ">  
 
-<p>Resubmitted. Direct causatives of unergatives: A view from variable unaccusativity. <a href="Neu_2024_Resubmitted.pdf">[pdf]</a></p>
+<p>Resubmitted. Direct causatives of unergatives: A view from variable unaccusativity. <a href="Neu_2024_Resubmitted.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>2023. Variable agreement with conjoined subjects in German: Testing the grammatical lacuna hypothesis. Unpublished Ms., UMass Amherst. <a href="Neu_2023_Ms.pdf">[pdf]</a></p>
+<p>To appear. (With Faruk Akkuş.) Involvee causatives in Turkish. <i>Proceedings of the Linguistic Society of America (PLSA)</i>. <a href="NeuAkkus_2024_LSA.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>2023. Causatives of unergatives in Hindi-Urdu. <i>Coyote Papers 25: Proceedings of ALC 16</i>. 71&#x2013;78. <a href="Neu_2023_ALC.pdf">[pdf]</a></p>
+<p>2023. Variable agreement with conjoined subjects in German: Testing the grammatical lacuna hypothesis. Unpublished Ms., UMass Amherst. <a href="Neu_2023_Ms.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>2023. Against a low subject analysis of causatives of unergatives. <i>Proceedings of the Linguistic Society of America (PLSA) 8(1)</i>. 5527. <a href="Neu_2023_LSA.pdf">[pdf]</a></p>
+<p>2023. Causatives of unergatives in Hindi-Urdu. <i>Coyote Papers 25: Proceedings of ALC 16</i>. 71&#x2013;78. <a href="Neu_2023_ALC.pdf" style="color: White">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span>
+
+<p>2023. Against a low subject analysis of causatives of unergatives. <i>Proceedings of the Linguistic Society of America (PLSA) 8(1)</i>. 5527. <a href="Neu_2023_LSA.pdf" style="color: White">[pdf]</a></p>
 
 <br> 
 
-<span style="display:inline-block; height: 65px;"></span>
+<span style="display:inline-block; height: 95px;"></span>
 
 </div>
 
