--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ p {
 }
 
 html * {
-  font-family: Times New Roman;
+  font-family: Helvetica, sans-serif;
 }
 
 /* Set the column floats and widths */
@@ -66,8 +66,9 @@ html * {
 /* Body styles */
 
 body {
-  background-color: White;
-  font-size: 22px;
+  background-color: Black;
+  font-size: 18px;
+  color: White;
 }
 
 
@@ -131,7 +132,7 @@ body {
 <!-- Contact Info on the Sidebar -->
 
 <div class="side-column" >
-<div style="margin-top:7%; font-size: 34px;"> 
+<div style="margin-top:7%; font-size: 38px;"> 
 
 <span style="display:inline-block; width: 50px;"></span>
 
@@ -168,7 +169,7 @@ Amherst, MA 01003<br>
 
 <span style="display:block; height: 10px;"></span>
 
-<p>I am a third year PhD student at the Linguistics Department of the University of Massachusetts Amherst, working on syntax, morphology and the lexicon-syntax interface. I hold a BA in Comparative Literature from Free University of Berlin and an MA in Linguistics from University College London.</p>
+<p> I am a third year PhD student at the Linguistics Department of the University of Massachusetts Amherst, working on syntax, morphology and the lexicon-syntax interface. I hold a BA in Comparative Literature from Free University of Berlin and an MA in Linguistics from University College London.</p>
 
 <br>
 
