--- a/output.html
+++ b/output.html
@@ -51,7 +51,7 @@ html * {
   position: absolute;
   background-color: Black;
   color: White;
-  font-size: 18px;
+  font-size: 20px;
   float: left;
 }
 
@@ -127,7 +127,7 @@ html * {
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>To appear. (With Faruk Akkuş.) Involvee causatives in Turkish. <i>Proceedings of the Linguistic Society of America (PLSA)</i>. <a href="NeuAkkus_2024_LSA.pdf" style="color: White">[pdf]</a></p>
+<p>2024. (With Faruk Akkuş.) Involvee causatives in Turkish. <i>Proceedings of the Linguistic Society of America (PLSA)</i>. <a href="NeuAkkus_2024_LSA.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
