--- a/output.html
+++ b/output.html
@@ -123,7 +123,15 @@ html * {
 
 <div class="main" style="margin-top:4%; float:left ">  
 
-<p>Resubmitted. Direct causatives of unergatives: A view from variable unaccusativity. <a href="Neu_2024_Resubmitted.pdf" style="color: White">[pdf]</a></p>
+<p>Submitted. Hybridity and change in Turkish inflectional morphology. <a href="Neu_Submitted_Hybridity.pdf" style="color: White">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span>
+
+<p>Accepted with minor revisions. Direct causatives of unergatives: A view from variable unaccusativity. <i>Natural Language and Linguistic Theory</i>. <a href="Neu_Accepted_NLLT.pdf" style="color: White">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span>
+
+<p>To appear. The realization of agreement in the Turkish verbal domain.  <i>Proceedings of the Workshop on Turkic and Languages in Contact with Turkic</i>. <a href="Neu_2024_Tu+.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
