--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@ Amherst, MA 01003<br>
 
 <span style="display:block; height: 10px;"></span>
 
-<p> I am a third year PhD student at the Linguistics Department of the University of Massachusetts Amherst, working on syntax, morphology and the lexicon-syntax interface. I hold an MA in Linguistics from University College London and BA in Comparative Literature from Free University of Berlin.</p>
+<p> I am a third year PhD student at the Linguistics Department of the University of Massachusetts Amherst. I hold an MA in Linguistics from University College London and a BA in Comparative Literature from Free University of Berlin.</p>
 
 <br>
 
-<p> My research is broadly concerned with issues of variation, gradience and productivity. Some of my current/recent projects include tense and agreement morphology in Turkish, direct causatives of unergatives in Hindi-Urdu, Turkish and Sason Arabic, and variable agreement with conjoined subjects in German. I dabble in computational modelling and distributional semantics, and I have an interest in language contact and diachrony.</p> 
+<p> My research is broadly concerned with syntax and its relation to the lexicon. At LF, I work on argument structure with a focus on how the lexical semantics of roots determine their syntactic profile, and towards PF, I work on various aspects of morphology and its interface with syntax. I dabble in computational modelling and distributional semantics, and I have an interest in language contact and diachrony.</p> 
 
 <br>
 
