--- a/output.html
+++ b/output.html
@@ -123,13 +123,21 @@ html * {
 
 <div class="main" style="margin-top:4%; float:left ">  
 
+<p><b>Journal papers</b> </p>
+
+<span style="display:inline-block; height: 28px;"></span> 
+
 <p>Submitted. Hybridity and change in Turkish inflectional morphology. <a href="Neu_Submitted_Hybridity.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
 <p>Accepted with minor revisions. Direct causatives of unergatives: A view from variable unaccusativity. <i>Natural Language and Linguistic Theory</i>. <a href="Neu_Accepted_NLLT.pdf" style="color: White">[pdf]</a></p>
 
-<span style="display:inline-block; height: 20px;"></span>
+<span style="display:inline-block; height: 36px;"></span>
+
+<p><b>Proceedings papers </b></p>
+
+<span style="display:inline-block; height: 24px;"></span> 
 
 <p>To appear. The realization of agreement in the Turkish verbal domain.  <i>Proceedings of the Workshop on Turkic and Languages in Contact with Turkic</i>. <a href="Neu_2024_Tu+.pdf" style="color: White">[pdf]</a></p>
 
@@ -139,15 +147,19 @@ html * {
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>2023. Variable agreement with conjoined subjects in German: Testing the grammatical lacuna hypothesis. Unpublished Ms., UMass Amherst. <a href="Neu_2023_Ms.pdf" style="color: White">[pdf]</a></p>
-
-<span style="display:inline-block; height: 20px;"></span>
-
 <p>2023. Causatives of unergatives in Hindi-Urdu. <i>Coyote Papers 25: Proceedings of ALC 16</i>. 71&#x2013;78. <a href="Neu_2023_ALC.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
 <p>2023. Against a low subject analysis of causatives of unergatives. <i>Proceedings of the Linguistic Society of America (PLSA) 8(1)</i>. 5527. <a href="Neu_2023_LSA.pdf" style="color: White">[pdf]</a></p>
+
+<span style="display:inline-block; height: 36px;"></span>
+
+<p><b>Unpublished stuff</b></p>
+
+<span style="display:inline-block; height: 28px;"></span> 
+
+<p>2023. Variable agreement with conjoined subjects in German: Testing the grammatical lacuna hypothesis. Ms., UMass Amherst. <a href="Neu_2023_Ms.pdf" style="color: White">[pdf]</a></p>
 
 <br> 
 
