--- a/output.html
+++ b/output.html
@@ -159,7 +159,7 @@ html * {
 
 <span style="display:inline-block; height: 28px;"></span> 
 
-<p>2023. Variable agreement with conjoined subjects in German: Testing the grammatical lacuna hypothesis. Ms., UMass Amherst. <a href="Neu_2023_Ms.pdf" style="color: White">[pdf]</a></p>
+<p>2023. Variable agreement with conjoined subjects in German: Testing the grammatical lacuna hypothesis. Ms., UMass Amherst. <a href="Neu_2023_Ms.pdf" style="color: White">[pdf]</a> <a href="https://github.com/Eva-Neu/Conjoined_subject_agreement" style="color: White">[code]</a></p>
 
 <br> 
 
