--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ html * {
 
 body {
   background-color: Black;
-  font-size: 18px;
+  font-size: 20px;
   color: White;
 }
 
@@ -173,7 +173,7 @@ Amherst, MA 01003<br>
 
 <br>
 
-<p> My research is broadly concerned with syntax and its relation to the lexicon. At LF, I work on argument structure with a focus on how the lexical semantics of roots determine their syntactic profile, and towards PF, I work on various aspects of morphology and its interface with syntax. I dabble in computational modelling and distributional semantics, and I have an interest in language contact and diachrony.</p> 
+<p> My research is broadly concerned with syntax and its relation to the lexicon. At LF, I work on argument structure with a focus on how the lexical semantics of roots determine their syntactic profile, and towards PF, I work on various aspects of morphology and its interface with syntax. I dabble in computational modelling and distributional semantics and I have an interest in language contact and diachrony.</p> 
 
 <br>
 
@@ -183,7 +183,24 @@ Amherst, MA 01003<br>
 
 <p>This is a low-carbon website. It is also under construction, possibly for a while.</p>
 
+<span style="display:inline-block; height: 35px;"></span>
+
+
+<p><b>News </b></p>
+
+<span style="display:inline-block; height: 20px;"></span>
+
+
+<p>&#9830;&nbsp;&nbsp; I will be at NELS 55 in October at Yale with a talk on Turkish inflectional morphology. </p>
+
+<br>
+
+<p>&#9830;&nbsp;&nbsp; My paper on direct causatives of unergatives was accepted, pending the minor inevitable, at NLLT; current version is <a href="Neu_Accepted_NLLT.pdf" style="color: White">here</a>. </p>
+
+
+
 <span style="display:inline-block; height: 65px;"></span>
+
 
 </div>
 </div> 
