--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ body {
 
 <b>Eva Neu</b></div><br>
 
+
 <div style="font-size: 15px; color: grey">
                 
 <p>eneu at umass dot edu<br>
@@ -191,11 +192,11 @@ Amherst, MA 01003<br>
 <span style="display:inline-block; height: 20px;"></span>
 
 
-<p>&#9830;&nbsp;&nbsp; I will be at NELS 55 in October at Yale with a talk on Turkish inflectional morphology. </p>
+<p>&diams;&nbsp;&nbsp; I will be at NELS 55 in October at Yale with a talk on Turkish inflectional morphology. </p>
 
 <br>
 
-<p>&#9830;&nbsp;&nbsp; My paper on direct causatives of unergatives was accepted, pending the minor inevitable, at NLLT; current version is <a href="Neu_Accepted_NLLT.pdf" style="color: White">here</a>. </p>
+<p>&diams;&nbsp;&nbsp; My paper on direct causatives of unergatives was accepted, pending the minor inevitable, at NLLT; current version is <a href="Neu_Accepted_NLLT.pdf" style="color: White">here</a>. </p>
 
 
 
