--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Amherst, MA 01003<br>
 
 <br>
 
-<p>&#9725;&nbsp; My paper on direct causatives of unergatives was accepted, pending the minor inevitable, at NLLT; current version is <a href="Neu_Accepted_NLLT.pdf" style="color: White">here</a>. </p>
+<p>&#9725;&nbsp; My paper on direct causatives of unergatives has been accepted, pending the minor inevitable, at NLLT; current version is <a href="Neu_Accepted_NLLT.pdf" style="color: White">here</a>. </p>
 
 
 
