--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Amherst, MA 01003<br>
 
 <span style="display:block; height: 10px;"></span>
 
-<p> I am a third year PhD student at the Linguistics Department of the University of Massachusetts Amherst. I hold an MA in Linguistics from University College London and a BA in Comparative Literature from Free University of Berlin.</p>
+<p> I am a fourth year PhD student at the Linguistics Department of the University of Massachusetts Amherst. I hold an MA in Linguistics from University College London and a BA in Comparative Literature from Free University of Berlin.</p>
 
 <br>
 
