--- a/index.html
+++ b/index.html
@@ -191,13 +191,11 @@ Amherst, MA 01003<br>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-
-<p>&#9725;&nbsp; I will be at NELS 55 in October at Yale with a talk on Turkish inflectional morphology. </p>
+<p>&#9725;&nbsp; New <a href="Neu_Submitted_SA.pdf" style="color: White">paper</a> on suspended affixation submitted. </p>
 
 <br>
 
-<p>&#9725;&nbsp; My paper on direct causatives of unergatives has been accepted, pending the minor inevitable, at NLLT; current version is <a href="Neu_Accepted_NLLT.pdf" style="color: White">here</a>. </p>
-
+<p>&#9725;&nbsp; I will be at NELS 55 in October at Yale with a talk on Turkish inflectional morphology. </p>
 
 
 <span style="display:inline-block; height: 65px;"></span>
