--- a/index.html
+++ b/index.html
@@ -191,6 +191,11 @@ Amherst, MA 01003<br>
 
 <span style="display:inline-block; height: 20px;"></span>
 
+<p>&#9725;&nbsp; I'm giving a guest lecture on Turkish inflectional morphology at Travis Major's Turkic Syntax seminar at USC; you can find the handout  <a href="Neu_handout_TurkicSyntax.pdf" style="color: White">here</a>. </p>
+
+<br>
+
+
 <p>&#9725;&nbsp; New <a href="Neu_Submitted_SA.pdf" style="color: White">paper</a> on suspended affixation submitted. </p>
 
 <br>
