--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Amherst, MA 01003<br>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>&#9725;&nbsp; I'm giving a guest lecture at Travis Major's Turkic Syntax seminar at USC; you can find the handout  <a href="Neu_handout_TurkicSyntax.pdf" style="color: White">here</a>. </p>
+<p>&#9725;&nbsp; I'm giving a guest lecture at Travis Major's Turkic syntax seminar at USC; you can find the handout  <a href="Neu_handout_TurkicSyntax.pdf" style="color: White">here</a>. </p>
 
 <br>
 
