--- a/index.html
+++ b/index.html
@@ -170,19 +170,16 @@ Amherst, MA 01003<br>
 
 <span style="display:block; height: 10px;"></span>
 
-<p> I am a fourth year PhD student at the Linguistics Department of the University of Massachusetts Amherst. I hold an MA in Linguistics from University College London and a BA in Comparative Literature from Free University of Berlin.</p>
+<p> I am a fourth year PhD candidate at the Linguistics Department of the University of Massachusetts Amherst. I hold an MA in Linguistics from University College London and a BA in Comparative Literature from Free University of Berlin.</p>
 
 <br>
 
-<p> My research is broadly concerned with syntax and its relation to the lexicon. At LF, I work on argument structure with a focus on how the lexical semantics of roots determine their syntactic profile, and towards PF, I work on various aspects of morphology and its interface with syntax. I dabble in computational modelling and distributional semantics and I have an interest in language contact and diachrony.</p> 
+<p> My research is broadly concerned with syntax and its interface with the lexicon. At LF, I work on argument structure and the mapping relationship between root semantics and syntax, with a focus on variable unaccusativity and other flexible linkings between arguments and structural positions. Towards PF, I work on phenomena at the boundary between morphology and syntax such as suspended affixation. I dabble in computational modelling and distributional semantics and I have an interest in language contact and diachrony.</p> 
 
 <br>
 
 <p>My last name is pronounced [nɔɪ]. I welcome all reasonable realizations of my first name. My pronouns are she/her.</p>
 
-<br>
-
-<p>This is a low-carbon website. It is also under construction, possibly for a while.</p>
 
 <span style="display:inline-block; height: 35px;"></span>
 
@@ -191,16 +188,18 @@ Amherst, MA 01003<br>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>&#9725;&nbsp; I'm giving a guest lecture at Travis Major's Turkic syntax seminar at USC; you can find the handout  <a href="Neu_handout_TurkicSyntax.pdf" style="color: White">here</a>. </p>
+
+
+<p>&#9725;&nbsp; I'm at NELS with a talk on Turkish inflectional morphology; my handout is <a href="Neu_handout_NELS55.pdf" style="color: White">here</a>.</p>
+
+<br>
+
+<p>&#9725;&nbsp; I will be giving a talk on agreement attraction effects and what they tell us about the representation of syntax in working memory at  <a href="https://sites.google.com/view/puzzlesofagreement" style="color: White">Puzzles of Agreement</a> (joint work with Maayan Keshev and Brian Dillon). Slides coming soon.</p>
 
 <br>
 
 
 <p>&#9725;&nbsp; New <a href="Neu_Submitted_SA.pdf" style="color: White">paper</a> on suspended affixation submitted. </p>
-
-<br>
-
-<p>&#9725;&nbsp; I will be at NELS 55 in October at Yale with a talk on Turkish inflectional morphology. </p>
 
 
 <span style="display:inline-block; height: 65px;"></span>
