--- a/index.html
+++ b/index.html
@@ -189,12 +189,7 @@ Amherst, MA 01003<br>
 <span style="display:inline-block; height: 20px;"></span>
 
 
-
-<p>&#9725;&nbsp; I'm at NELS with a talk on Turkish inflectional morphology; my handout is <a href="Neu_handout_NELS55.pdf" style="color: White">here</a>.</p>
-
-<br>
-
-<p>&#9725;&nbsp; I will be giving a talk on agreement attraction effects and what they tell us about the representation of syntax in working memory at  <a href="https://sites.google.com/view/puzzlesofagreement" style="color: White">Puzzles of Agreement</a> (joint work with Maayan Keshev and Brian Dillon). Slides coming soon.</p>
+<p>&#9725;&nbsp; I will be giving a talk on agreement attraction effects and what they tell us about the representation of syntax in working memory at  <a href="https://sites.google.com/view/puzzlesofagreement" style="color: White">Puzzles of Agreement</a> (joint work with Maayan Keshev and Brian Dillon). Slides are <a href="NeuEtAl_slides_PuzzlesOfAgreement.pdf" style="color: White">here</a>.</p>
 
 <br>
 
