--- a/index.html
+++ b/index.html
@@ -189,11 +189,7 @@ Amherst, MA 01003<br>
 <span style="display:inline-block; height: 20px;"></span>
 
 
-<p>&#9725;&nbsp; I will be giving a talk on agreement attraction effects and what they tell us about the representation of syntax in working memory at  <a href="https://sites.google.com/view/puzzlesofagreement" style="color: White">Puzzles of Agreement</a> (joint work with Maayan Keshev and Brian Dillon). Slides are <a href="NeuEtAl_slides_PuzzlesOfAgreement.pdf" style="color: White">here</a>.</p>
-
-<br>
-
-<p>&#9725;&nbsp; New <a href="Neu_Submitted_SA.pdf" style="color: White">paper</a> on suspended affixation submitted. </p>
+<p>&#9725;&nbsp; I'm giving a talk on argument structure at Yale's Syntax Reading Group on December 6. Handout coming soon.</p>
 
 
 <span style="display:inline-block; height: 65px;"></span>
