--- a/output.html
+++ b/output.html
@@ -131,7 +131,7 @@ html * {
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>Submitted. Hybridity and change in Turkish inflectional morphology. <a href="Neu_Submitted_Hybridity.pdf" style="color: White">[pdf]</a></p>
+<p>Submitted. Hybridity and change in Turkish inflectional morphology. <a href="Neu_UnderReview_Hybridity.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
