--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ Amherst, MA 01003<br>
 <span style="display:inline-block; height: 20px;"></span>
 
 
-<p>&#9725;&nbsp; I'm giving a talk on argument structure at Yale's Syntax Reading Group on December 6. Handout coming soon.</p>
+<p>&#9725;&nbsp; I'm giving a talk on argument structure at Yale's Syntax Reading Group on December 6. My handout is <a href="Neu_YSRG_handout.pdf" style="color: White">here</a>.</p>
 
 <span style="display:inline-block; height: 2px;"></span>
 
