--- a/output.html
+++ b/output.html
@@ -163,11 +163,23 @@ html * {
 
 <span style="display:inline-block; height: 36px;"></span>
 
-<p><b>Unpublished stuff</b></p>
+<p><b>Unpublished manuscripts</b></p>
 
 <span style="display:inline-block; height: 28px;"></span> 
 
 <p>2023. Variable agreement with conjoined subjects in German: Testing the grammatical lacuna hypothesis. Ms., UMass Amherst. <a href="Neu_2023_Ms.pdf" style="color: White">[pdf]</a> <a href="https://github.com/Eva-Neu/Conjoined_subject_agreement" style="color: White">[code]</a></p>
+
+<span style="display:inline-block; height: 36px;"></span>
+
+<p><b>Slides/handouts on pre-manuscript-stage work</b></p>
+
+<span style="display:inline-block; height: 28px;"></span> 
+
+<p>2024. Variable linking in argument structure. <a href="Neu_YSRG_handout.pdf" style="color: White">Handout</a> for talk at the Yale Syntax Reading Group, December 6.</p>
+
+<span style="display:inline-block; height: 20px;"></span> 
+
+<p>2024. (With Maayan Keshev and Brian Dillon.) Modelling agreement attraction effects in vector space. <a href="NeuEtAl_PuzzlesOfAgreement.pdf" style="color: White">Slides</a> for talk at <i>Puzzles of agreement</i>, October 24&ndash;25.</p>
 
 <br> 
 
