--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ Amherst, MA 01003<br>
 <span style="display:inline-block; height: 2px;"></span>
 
 
-<p>&#9725;&nbsp; I'll be at the 2025 LSA presenting 1) a vector-symbolic representation of syntax in working memory (with Maayan Keshev and Brian Dillon), 2) new findings on non-standard Turkish affix ordering, and 3) a corpus study on animacy and telicity in Hindi intransitives (with Rajesh Bhatt and Shaunak Phadnis).</p>
+<p>&#9725;&nbsp; I'll be at the 2025 LSA presenting 1) a vector-symbolic model of syntax in working memory (with Maayan Keshev and Brian Dillon), 2) new findings on non-standard Turkish affix ordering, and 3) a corpus study on animacy and telicity in Hindi intransitives (with Rajesh Bhatt and Shaunak Phadnis).</p>
 
 
 <span style="display:inline-block; height: 65px;"></span>
