--- a/output.html
+++ b/output.html
@@ -135,7 +135,7 @@ html * {
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>Accepted with minor revisions. Direct causatives of unergatives: A view from variable unaccusativity. <i>Natural Language and Linguistic Theory</i>. <a href="Neu_Accepted_NLLT.pdf" style="color: White">[pdf]</a></p>
+<p>Accepted. Direct causatives of unergatives: A view from variable unaccusativity. <i>Natural Language and Linguistic Theory</i>. <a href="Neu_Accepted_NLLT.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 36px;"></span>
 
