--- a/output.html
+++ b/output.html
@@ -175,11 +175,11 @@ html * {
 
 <span style="display:inline-block; height: 28px;"></span> 
 
-<p>2024. Variable linking in argument structure. <a href="Neu_YSRG_handout.pdf" style="color: White">Handout</a> for talk at the Yale Syntax Reading Group, December 6.</p>
+<p>2024. Variable linking in argument structure. Handout for talk at the Yale Syntax Reading Group, December 6. <a href="Neu_YSRG_handout.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span> 
 
-<p>2024. (With Maayan Keshev and Brian Dillon.) Modelling agreement attraction effects in vector space. <a href="NeuEtAl_PuzzlesOfAgreement.pdf" style="color: White">Slides</a> for talk at <i>Puzzles of agreement</i>, October 24&ndash;25.</p>
+<p>2024. (With Maayan Keshev and Brian Dillon.) Modelling agreement attraction effects in vector space. Slides for talk at <i>Puzzles of agreement</i>, October 24&ndash;25. <a href="NeuEtAl_PuzzlesOfAgreement.pdf" style="color: White">[pdf]</a> <a href="https://github.com/Eva-Neu/syntactic_vectors" style="color: White">[code]</a></p>
 
 <br> 
 
