--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@ body {
 
 <b>Eva Neu</b></div><br>
 
+<p><img src="pic.jpeg" style="width:160px"></p>
+
+<br>
+
 <div style="font-size: 15px; color: grey">
                 
 <p>eneu at umass dot edu<br>
