--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ Amherst, MA 01003<br>
 <span style="display:inline-block; height: 20px;"></span>
 
 
-<p>&#9725;&nbsp; I'll be at the 2025 LSA presenting 1) a vector-symbolic model of syntax in working memory (with Maayan Keshev and Brian Dillon), 2) new findings on non-standard Turkish affix ordering, and 3) a corpus study on animacy and telicity in Hindi intransitives (with Rajesh Bhatt and Shaunak Phadnis).</p>
+<p>&#9725;&nbsp; I'll be at the 2025 LSA presenting 1) a vector-symbolic model of syntax in working memory (with Maayan Keshev and Brian Dillon) <a href="NeuEtAl_LSA25_Vectors.pdf" style="color: White">[slides]</a> <a href="https://github.com/Eva-Neu/syntactic_vectors" style="color: White">[code]</a>, 2) new findings on non-standard Turkish affix ordering <a href="Neu_LSA25_AffixOrderVariation.pdf" style="color: White">[poster]</a>, and 3) a corpus study on animacy and telicity in Hindi intransitives (with Rajesh Bhatt and Shaunak Phadnis) <a href="NeuEtAl_LSA25_AnimacyTelicity.pdf" style="color: White">[poster]</a>.</p>
 
 
 <span style="display:inline-block; height: 65px;"></span>
