--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ Amherst, MA 01003<br>
 
 <br>
 
-<p> My research is broadly concerned with syntax and its interface with the lexicon. At LF, I work on argument structure and the mapping relationship between root semantics and syntax, with a focus on variable unaccusativity and other flexible linkings between arguments and structural positions. Towards PF, I work on phenomena at the boundary between morphology and syntax such as suspended affixation. I dabble in computational modelling and distributional semantics and I have an interest in language contact and diachrony.</p> 
+<p> My research is broadly concerned with syntax and its interface with the lexicon. At LF, I work on argument structure and the mapping relationship between root semantics and syntax, with a focus on variable unaccusativity and other flexible linkings between arguments and structural positions. Towards PF, I work on phenomena at the boundary between morphology and syntax, in particular suspended affixation. I dabble in computational modelling and distributional semantics and I have an interest in language contact and diachrony.</p> 
 
 <br>
 
@@ -193,7 +193,7 @@ Amherst, MA 01003<br>
 <span style="display:inline-block; height: 20px;"></span>
 
 
-<p>&#9725;&nbsp; I'll be at the 2025 LSA presenting 1) a vector-symbolic model of syntax in working memory (with Maayan Keshev and Brian Dillon) <a href="NeuEtAl_LSA25_Vectors.pdf" style="color: White">[slides]</a> <a href="https://github.com/Eva-Neu/syntactic_vectors" style="color: White">[code]</a>, 2) new findings on non-standard Turkish affix ordering <a href="Neu_LSA25_AffixOrderVariation.pdf" style="color: White">[poster]</a>, and 3) a corpus study on animacy and telicity in Hindi intransitives (with Rajesh Bhatt and Shaunak Phadnis) <a href="NeuEtAl_LSA25_AnimacyTelicity.pdf" style="color: White">[poster]</a>.</p>
+<p>&#9725;&nbsp; I'll be at HSP2025 presenting joint work with Maayan Keshev and Brian Dillon on a vector-symbolic model of syntax in working memory that is informed by agreement attraction data.</p>
 
 
 <span style="display:inline-block; height: 65px;"></span>
