--- a/output.html
+++ b/output.html
@@ -171,15 +171,26 @@ html * {
 
 <span style="display:inline-block; height: 36px;"></span>
 
-<p><b>Slides/handouts on pre-manuscript-stage work</b></p>
+<p><b>Slides/handouts/posters on pre-manuscript-stage work</b></p>
 
 <span style="display:inline-block; height: 28px;"></span> 
+
+<p>2025. (With Maayan Keshev and Brian Dillon.) Encoding syntactic positions in working memory: A computational approach. 2025 LSA Annual Meeting, Philadelphia, PA, January 9–12. <a href="NeuEtAl_LSA25_Vectors.pdf" style="color: White">[pdf]</a> <a href="https://github.com/Eva-Neu/syntactic_vectors" style="color: White">[code]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span> 
+
+<p>2025. Variation and gradience in non-standard Turkish affix ordering. Poster presented at the 2025 LSA Annual Meeting, Philadelphia, PA, January 9–12. <a href="Neu_LSA25_AffixOrderVariation.pdf" style="color: White">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span> 
+
+<p>2025. (With Rajesh Bhatt and Shaunak Phadnis.) Degrees of animacy and telicity in Hindi intransitives: A corpus study. Poster presented at the 2025 LSA Annual Meeting, Philadelphia, PA, January 9–12. <a href="NeuEtAl_LSA25_AnimacyTelicity.pdf" style="color: White">[pdf]</a> <a href="https://github.com/Eva-Neu/Animacy_telicity_Hindi" style="color: White">[code]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span> 
+
 
 <p>2024. Variable linking in argument structure. Handout for talk at the Yale Syntax Reading Group, December 6. <a href="Neu_YSRG_handout.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span> 
-
-<p>2024. (With Maayan Keshev and Brian Dillon.) Modelling agreement attraction effects in vector space. Slides for talk at <i>Puzzles of agreement</i>, October 24&ndash;25. <a href="NeuEtAl_PuzzlesOfAgreement.pdf" style="color: White">[pdf]</a> <a href="https://github.com/Eva-Neu/syntactic_vectors" style="color: White">[code]</a></p>
 
 <br> 
 
