--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ Amherst, MA 01003<br>
 <span style="display:inline-block; height: 20px;"></span>
 
 
-<p>&#9725;&nbsp; I'll be at HSP2025 presenting joint work with Maayan Keshev and Brian Dillon on a vector-symbolic model of syntax in working memory that is informed by agreement attraction data.</p>
+<p>&#9725;&nbsp; I'll be at HSP2025 presenting joint work with Maayan Keshev and Brian Dillon on a vector-symbolic model of syntax in working memory that is informed by agreement attraction data. Our poster is <a href="NeuEtAl_HSP_Vectors.pdf" style="color: White">here</a>.</p>
 
 
 <span style="display:inline-block; height: 65px;"></span>
