--- a/output.html
+++ b/output.html
@@ -147,7 +147,7 @@ html * {
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>To appear. The realization of agreement in the Turkish verbal domain.  <i>Proceedings of the Workshop on Turkic and Languages in Contact with Turkic</i>. <a href="Neu_2024_Tu+.pdf" style="color: White">[pdf]</a></p>
+<p>2024. The realization of agreement in the Turkish verbal domain.  <i>Proceedings of the Workshop on Turkic and Languages in Contact with Turkic</i>. <a href="Neu_2024_Tu+.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
