--- a/output.html
+++ b/output.html
@@ -143,6 +143,10 @@ html * {
 
 <span style="display:inline-block; height: 24px;"></span> 
 
+<p>To appear. Variation and gradience in non-standard Turkish affix ordering.  <i>Proceedings of the Linguistic Society of America (PLSA) 10(1)</i>. <a href="Neu_2025_LSA_Turkish.pdf" style="color: White">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span>
+
 <p>To appear. (With Faruk Akkuş.) Causatives without causation: Involvee causatives in Turkish.  <i>Proceedings of the 42nd West Coast Conference on Formal Linguistics</i>. <a href="NeuAkkus_2024_WCCFL.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
@@ -175,11 +179,7 @@ html * {
 
 <span style="display:inline-block; height: 28px;"></span> 
 
-<p>2025. (With Maayan Keshev and Brian Dillon.) Encoding syntactic positions in working memory: A computational approach. 2025 LSA Annual Meeting, Philadelphia, PA, January 9–12. <a href="NeuEtAl_LSA25_Vectors.pdf" style="color: White">[pdf]</a> <a href="https://github.com/Eva-Neu/syntactic_vectors" style="color: White">[code]</a></p>
-
-<span style="display:inline-block; height: 20px;"></span> 
-
-<p>2025. Variation and gradience in non-standard Turkish affix ordering. Poster presented at the 2025 LSA Annual Meeting, Philadelphia, PA, January 9–12. <a href="Neu_LSA25_AffixOrderVariation.pdf" style="color: White">[pdf]</a></p>
+<p>2025. (With Maayan Keshev and Brian Dillon.) Encoding syntactic positions in working memory: A computational approach. HSP2025, University of Maryland, March 27–29.  <a href="NeuEtAl_HSP_Vectors.pdf" style="color: White">[pdf]</a> <a href="https://github.com/Eva-Neu/syntactic_vectors" style="color: White">[code]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span> 
 
