--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@ Amherst, MA 01003<br>
 
 <span style="display:inline-block; height: 20px;"></span>
 
+<p>&#9725;&nbsp; New proceedings paper on Turkish affix order variation available <a href="Neu_2025_LSA_Turkish.pdf" style="color: White">here</a>.</p>
+
+<span style="display:inline-block; height: 20px;"></span>
+
 
 <p>&#9725;&nbsp; I'll be at HSP2025 presenting joint work with Maayan Keshev and Brian Dillon on a vector-symbolic model of syntax in working memory that is informed by agreement attraction data. <a href="NeuEtAl_HSP_Vectors.pdf" style="color: White">[poster]</a> <a href="https://github.com/Eva-Neu/syntactic_vectors" style="color: White">[code]</a></p>
 
