--- a/output.html
+++ b/output.html
@@ -179,7 +179,7 @@ html * {
 
 <span style="display:inline-block; height: 28px;"></span> 
 
-<p>2025. (With Maayan Keshev and Brian Dillon.) Encoding syntactic positions in working memory: A computational approach. HSP2025, University of Maryland, March 27–29.  <a href="NeuEtAl_HSP_Vectors.pdf" style="color: White">[pdf]</a> <a href="https://github.com/Eva-Neu/syntactic_vectors" style="color: White">[code]</a></p>
+<p>2025. (With Maayan Keshev and Brian Dillon.) Encoding syntactic positions in working memory: A computational approach. Poster presented at HSP2025, University of Maryland, March 27–29.  <a href="NeuEtAl_HSP_Vectors.pdf" style="color: White">[pdf]</a> <a href="https://github.com/Eva-Neu/syntactic_vectors" style="color: White">[code]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span> 
 
