--- a/output.html
+++ b/output.html
@@ -143,6 +143,10 @@ html * {
 
 <span style="display:inline-block; height: 20px;"></span>
 
+<p>To appear. (With Rajesh Bhatt and Shaunak Phadnis.) Degrees of animacy and telicity in Hindi intransitives: A corpus study.  <i>Proceedings of the Linguistic Society of America (PLSA) 10(1)</i>. <a href="NeuEtAl_2025_LSA_Hindi.pdf" style="color: White">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span>
+
 <p>To appear. (With Faruk Akkuş.) Causatives without causation: Involvee causatives in Turkish.  <i>Proceedings of the 42nd West Coast Conference on Formal Linguistics</i>. <a href="NeuAkkus_2024_WCCFL.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
@@ -178,11 +182,6 @@ html * {
 <p>2025. (With Maayan Keshev and Brian Dillon.) Encoding syntactic positions in working memory: A computational approach. Poster presented at HSP2025, University of Maryland, March 27–29.  <a href="NeuEtAl_HSP_Vectors.pdf" style="color: White">[pdf]</a> <a href="https://github.com/Eva-Neu/syntactic_vectors" style="color: White">[code]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span> 
-
-<p>2025. (With Rajesh Bhatt and Shaunak Phadnis.) Degrees of animacy and telicity in Hindi intransitives: A corpus study. Poster presented at the 2025 LSA Annual Meeting, Philadelphia, PA, January 9–12. <a href="NeuEtAl_LSA25_AnimacyTelicity.pdf" style="color: White">[pdf]</a> <a href="https://github.com/Eva-Neu/Animacy_telicity_Hindi" style="color: White">[code]</a></p>
-
-<span style="display:inline-block; height: 20px;"></span> 
-
 
 <p>2024. Variable linking in argument structure. Handout for talk at the Yale Syntax Reading Group, December 6. <a href="Neu_YSRG_handout.pdf" style="color: White">[pdf]</a></p>
 
