--- a/output.html
+++ b/output.html
@@ -139,15 +139,15 @@ html * {
 
 <span style="display:inline-block; height: 24px;"></span> 
 
-<p>To appear. Variation and gradience in non-standard Turkish affix ordering.  <i>Proceedings of the Linguistic Society of America (PLSA) 10(1)</i>. <a href="Neu_2025_LSA_Turkish.pdf" style="color: White">[pdf]</a></p>
-
-<span style="display:inline-block; height: 20px;"></span>
-
-<p>To appear. (With Rajesh Bhatt and Shaunak Phadnis.) Degrees of animacy and telicity in Hindi intransitives: A corpus study.  <i>Proceedings of the Linguistic Society of America (PLSA) 10(1)</i>. <a href="NeuEtAl_2025_LSA_Hindi.pdf" style="color: White">[pdf]</a></p>
-
-<span style="display:inline-block; height: 20px;"></span>
-
 <p>To appear. (With Faruk Akkuş.) Causatives without causation: Involvee causatives in Turkish.  <i>Proceedings of the 42nd West Coast Conference on Formal Linguistics</i>. <a href="NeuAkkus_2024_WCCFL.pdf" style="color: White">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span>
+
+<p>2025. Variation and gradience in non-standard Turkish affix ordering.  <i>Proceedings of the Linguistic Society of America (PLSA) 10(1)</i>. 5922. <a href="Neu_2025_LSA_Turkish.pdf" style="color: White">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span>
+
+<p>2025. (With Rajesh Bhatt and Shaunak Phadnis.) Degrees of animacy and telicity in Hindi intransitives: A corpus study.  <i>Proceedings of the Linguistic Society of America (PLSA) 10(1)</i>. 5923. <a href="NeuEtAl_2025_LSA_Hindi.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
