--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ body {
 
 <p>Department of Linguistics<br>
 N408 Integrative Learning Center<br>
-University of Mass. Amherst<br>
+UMass Amherst<br>
 650 North Pleasant Street<br>
 Amherst, MA 01003<br>
 </p>
