--- a/output.html
+++ b/output.html
@@ -127,11 +127,11 @@ html * {
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>Submitted. Hybridity and change in Turkish inflectional morphology. <a href="Neu_UnderReview_Hybridity.pdf" style="color: White">[pdf]</a></p>
+<p>Accepted pending revisions. Hybridity and change in Turkish inflectional morphology. <a href="Neu_UnderReview_Hybridity.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>Accepted. Direct causatives of unergatives: A view from variable unaccusativity. <i>Natural Language and Linguistic Theory</i>. <a href="Neu_Accepted_NLLT.pdf" style="color: White">[pdf]</a></p>
+<p>To appear. Direct causatives of unergatives: A view from variable unaccusativity. <i>Natural Language and Linguistic Theory</i>. <a href="Neu_Accepted_NLLT.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 36px;"></span>
 
