--- a/output.html
+++ b/output.html
@@ -127,7 +127,7 @@ html * {
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>Accepted pending revisions. Hybridity and change in Turkish inflectional morphology. <a href="Neu_UnderReview_Hybridity.pdf" style="color: White">[pdf]</a></p>
+<p>Accepted pending revisions. Hybridity and change in Turkish inflectional morphology. <i>Linguistic Variation</i>. <a href="Neu_UnderReview_Hybridity.pdf" style="color: White">[pdf]</a></p>
 
 <span style="display:inline-block; height: 20px;"></span>
 
