--- a/index.html
+++ b/index.html
@@ -192,7 +192,11 @@ Amherst, MA 01003<br>
 
 <span style="display:inline-block; height: 20px;"></span>
 
-<p>&#9725;&nbsp; Two new proceedings papers on <a href="Neu_2025_LSA_Turkish.pdf" style="color: White">Turkish affix order variation</a> and <a href="NeuEtAl_2025_LSA_Hindi.pdf" style="color: White">animacy and telicity in Hindi intransitives</a>.</p>
+<p>&#9725;&nbsp; I'll be at NELS at NYU to give a talk together with <a href="https://www.qmul.ac.uk/sllf/linguistics/people/research-students/profiles/guo.html" style="color: White">Lulu Guo</a> on a multidominance analysis of phrasal and subword RNR. Our abstract is <a href="NeuGuo_2025_NELS_abstract.pdf" style="color: White">here</a>.</p>
+
+<span style="display:inline-block; height: 20px;"></span>
+
+<p>&#9725;&nbsp; My dissertation prospectus is now available <a href="Neu_diss_prospectus.pdf" style="color: White">here</a>.</p>
 
 
 <span style="display:inline-block; height: 65px;"></span>
