--- a/output.html
+++ b/output.html
@@ -179,15 +179,12 @@ html * {
 
 <span style="display:inline-block; height: 28px;"></span> 
 
+<p>2025. From roots to trees: Thematic roles and the lexicon-syntax interface. Dissertation prospectus, UMass Amherst. <a href="Neu_diss_prospectus.pdf" style="color: White">[pdf]</a></p>
+
+<span style="display:inline-block; height: 20px;"></span> 
+
 <p>2025. (With Maayan Keshev and Brian Dillon.) Encoding syntactic positions in working memory: A computational approach. Poster presented at HSP2025, University of Maryland, March 27–29.  <a href="NeuEtAl_HSP_Vectors.pdf" style="color: White">[pdf]</a> <a href="https://github.com/Eva-Neu/syntactic_vectors" style="color: White">[code]</a></p>
 
-<span style="display:inline-block; height: 20px;"></span> 
-
-<p>2024. Variable linking in argument structure. Handout for talk at the Yale Syntax Reading Group, December 6. <a href="Neu_YSRG_handout.pdf" style="color: White">[pdf]</a></p>
-
-<span style="display:inline-block; height: 20px;"></span> 
-
-<br> 
 
 <span style="display:inline-block; height: 95px;"></span>
 
