--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@ Amherst, MA 01003<br>
 
 <span style="display:block; height: 10px;"></span>
 
-<p> I am a fourth year PhD candidate at the Linguistics Department of the University of Massachusetts Amherst. I hold an MA in Linguistics from University College London and a BA in Comparative Literature from Free University of Berlin.</p>
+<p> I am a fifth year PhD candidate at the Linguistics Department of the University of Massachusetts Amherst. I hold an MA in Linguistics from University College London and a BA in Comparative Literature from Free University of Berlin.</p>
 
 <br>
 
-<p> My research is broadly concerned with syntax and its interface with the lexicon. At LF, I work on argument structure and the mapping relationship between root semantics and syntax, with a focus on variable unaccusativity and other flexible linkings between arguments and structural positions. Towards PF, I work on phenomena at the boundary between morphology and syntax, in particular suspended affixation. I dabble in computational modelling and distributional semantics and I have an interest in language contact and diachrony.</p> 
+<p> My research is broadly concerned with the interface between syntax and the lexicon. At LF, I work on argument structure and the mapping relationship between root semantics and syntac. Towards PF, I work on phenomena at the boundary between morphology and syntax, with a particular focus on coordination at the subword level. I dabble in computational modelling and distributional semantics, and I have an interest in language contact and diachrony.</p> 
 
 <br>
 
