--- a/index.html
+++ b/index.html
@@ -190,6 +190,12 @@ Amherst, MA 01003<br>
 
 <p><b>News </b></p>
 
+
+
+<span style="display:inline-block; height: 20px;"></span>
+
+<p>&#9725;&nbsp; My paper <i>Hybridity and change in Turkish inflectional morphology</i> has been accepted, pending minor revisions, at <i>Linguistic Variation</i>. The current version is <a href="Neu_UnderReview_Hybridity.pdf" style="color: White">here</a>.</p>
+
 <span style="display:inline-block; height: 20px;"></span>
 
 <p>&#9725;&nbsp; I'll be at NELS at NYU to give a talk together with <a href="https://www.qmul.ac.uk/sllf/linguistics/people/research-students/profiles/guo.html" style="color: White">Lulu Guo</a> on a multidominance analysis of phrasal and subword RNR. Our abstract is <a href="NeuGuo_2025_NELS_abstract.pdf" style="color: White">here</a>.</p>
